[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/SupportScenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/PNG/crosshair010.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SupportScenes/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/default_theme.theme" type="Theme" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.117647, 0.0705882, 0.921569, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.25
mid_height = 1.2

[sub_resource type="CapsuleShape" id=3]
radius = 0.25
height = 1.38884

[sub_resource type="CylinderShape" id=4]
radius = 0.252212
height = 0.283833

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.1, 0.2, 0.5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.101961, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.972549, 0.909804, 0.172549, 1 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.747643, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -2.10555e-07, -1.29238, 0, 1, -1.62921e-07, 0, 0.405382, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.259974, 0 )
shape = SubResource( 3 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.396841, 0 )
shape = SubResource( 4 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1637, 0 )

[node name="Hand" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.178575, -0.35012, -0.434543 )

[node name="Gun" type="MeshInstance" parent="Head/Hand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0682134, 0.0229161, -0.275852 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="Weapon" parent="Head/Hand" instance=ExtResource( 3 )]

[node name="Camera" type="Camera" parent="Head"]
current = true

[node name="CrossHair" type="TextureRect" parent="Head/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AimCast" type="RayCast" parent="Head/Camera"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 10 )

[node name="PlayerInfo" type="VBoxContainer" parent="Head/Camera"]
modulate = Color( 1, 1, 1, 0.258824 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
rect_min_size = Vector2( 100, 200 )
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="Head/Camera/PlayerInfo"]
margin_right = 100.0
margin_bottom = 27.0
text = "Ammo:6"

[node name="HP" type="Label" parent="Head/Camera/PlayerInfo"]
margin_top = 31.0
margin_right = 100.0
margin_bottom = 58.0
text = "HP"

[node name="HPBar" type="ProgressBar" parent="Head/Camera/PlayerInfo"]
margin_top = 62.0
margin_right = 100.0
margin_bottom = 89.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
rounded = true

[node name="HandLoc" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.178575, -0.35012, -0.434543 )
[connection signal="timeout" from="Head/Hand/Weapon/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]

[editable path="Head/Hand/Weapon"]
